Update to kirkstone and retarget to Raspberry Pi 4

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 [submodule "sources/meta-srobo"]
 	path = sources/meta-srobo
 	url = https://github.com/srobo/meta-srobo.git
+[submodule "sources/meta-raspberrypi"]
+	path = sources/meta-raspberrypi
+	url = https://github.com/agherzan/meta-raspberrypi.git
+	branch = kirkstone
