--- a/srobo-config/bblayers.conf
+++ b/srobo-config/bblayers.conf
@@ -14,6 +14,6 @@ BBLAYERS ?= " \
   ${BSPDIR}/sources/meta-openembedded/meta-python \
   ${BSPDIR}/sources/meta-openembedded/meta-filesystems \
   ${BSPDIR}/sources/meta-openembedded/meta-networking \
-  ${BSPDIR}/sources/meta-odroid-u3 \
+  ${BSPDIR}/sources/meta-raspberrypi \
   ${BSPDIR}/sources/meta-srobo \
   "
