--- a/srobo-config/bblayers.conf
+++ b/srobo-config/bblayers.conf
@@ -15,5 +15,7 @@ BBLAYERS ?= " \
   ${BSPDIR}/sources/meta-openembedded/meta-filesystems \
   ${BSPDIR}/sources/meta-openembedded/meta-networking \
   ${BSPDIR}/sources/meta-raspberrypi \
+  ${BSPDIR}/sources/meta-rauc \
+  ${BSPDIR}/sources/meta-rauc-community/meta-rauc-raspberrypi \
   ${BSPDIR}/sources/meta-srobo \
   "
