--- a/srobo-config/local.conf
+++ b/srobo-config/local.conf
@@ -281,8 +281,9 @@ CONF_VERSION = "2"
 
 DISTRO_FEATURES += "polkit"
 
-# Add systemd
-DISTRO_FEATURES += "systemd"
+# Add systemd & RAUC
+DISTRO_FEATURES += "systemd rauc"
+INIT_MANAGER = "systemd"
 VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
 VIRTUAL-RUNTIME_initscripts = ""
@@ -290,4 +291,12 @@ VIRTUAL-RUNTIME_initscripts = ""
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "kernel-modules"
 CORE_IMAGE_EXTRA_INSTALL += "linux-firmware"
 
+IMAGE_INSTALL:append = " rauc"
+IMAGE_FSTYPES += "ext4 wic.bz2"
+WKS_FILE = "sdimage-dual-raspberrypi.wks.in"
+
+ENABLE_UART = "1"
+
 DL_DIR ?= "${BSPDIR}/downloads"
+
+SROBO_VERSION = "2023.0.0"
