Configure udiskie to ignore the system partitions
Rauc cannot update a mounted partition.

Fixes #14

--- a/sources/meta-srobo/recipes-robot/python-astoria/astoria-udiskie/astoria-udiskie.service
+++ b/sources/meta-srobo/recipes-robot/python-astoria/astoria-udiskie/astoria-udiskie.service
@@ -3,7 +3,7 @@ Description=Udiskie Disk Automounter
 After=udisks2.service
 
 [Service]
-ExecStart=/usr/bin/udiskie
+ExecStart=/usr/bin/udiskie -c /etc/astoria-udiskie.yml
 User=astoria
 Restart=on-failure
 RestartSec=5s
