Set hostname to be robot
The hostname is currently raspberrypi4-64, robot is more descriptive

--- a/srobo-config/local.conf
+++ b/srobo-config/local.conf
@@ -289,6 +289,7 @@ CORE_IMAGE_EXTRA_INSTALL += "linux-firmware"
 IMAGE_INSTALL:append = " rauc"
 IMAGE_FSTYPES += "ext4 wic.bz2"
 WKS_FILE = "sdimage-dual-raspberrypi.wks.in"
+hostname:pn-base-files = "robot"
 
 ENABLE_UART = "1"
 
