--- a/sources/meta-srobo/recipes-robot/srobo-network/srobo-network/dnsmasq.conf
+++ b/sources/meta-srobo/recipes-robot/srobo-network/srobo-network/dnsmasq.conf
@@ -1,6 +1,14 @@
+# Upstream DNS for when we are connected to the internet
 server=1.1.1.1
 server=1.0.0.1
+
 interface=br0
 dhcp-option=3,0.0.0.0 # set default gateway
 dhcp-range=192.168.32.2,192.168.32.254,5m
 dhcp-option=6,192.168.32.1
+
+local=/lan/
+domain=lan
+
+address=/robot.lan/192.168.32.1
+
