--- a/srobo-config/bblayers.conf
+++ b/srobo-config/bblayers.conf
@@ -15,7 +15,9 @@ BBLAYERS ?= " \
   ${BSPDIR}/sources/meta-openembedded/meta-filesystems \
   ${BSPDIR}/sources/meta-openembedded/meta-networking \
   ${BSPDIR}/sources/meta-raspberrypi \
-  ${BSPDIR}/sources/meta-rauc \
-  ${BSPDIR}/sources/meta-rauc-raspberrypi \
   ${BSPDIR}/sources/meta-srobo \
   "
+
+# The following layers have been disabled but remain in the repo as we're not shipping RAUC yet:
+# ${BSPDIR}/sources/meta-rauc
+# ${BSPDIR}/sources/meta-rauc-raspberrypi
