--- a/srobo-config/local.conf
+++ b/srobo-config/local.conf
@@ -274,8 +274,7 @@ PACKAGECONFIG:append:pn-qemu-system-native = " sdl"
 # this doesn't mean anything to you.
 CONF_VERSION = "2"
 
-DISTRO_FEATURES += "polkit"
-DISTRO_FEATURES += "systemd"
+DISTRO_FEATURES += "polkit systemd"
 INIT_MANAGER = "systemd"
 VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
