--- a/srobo-config/local.conf
+++ b/srobo-config/local.conf
@@ -288,3 +288,5 @@ hostname:pn-base-files = "robot"
 DL_DIR ?= "${BSPDIR}/downloads"
 
 SROBO_VERSION = "2023.0.0"
+
+IMAGE_INSTALL:append = " nano vim"
