Add pip and a compiler so any package can be installed Expand the rootfs size

--- a/srobo-config/local.conf
+++ b/srobo-config/local.conf
@@ -287,6 +287,10 @@ hostname:pn-base-files = "robot"
 
 DL_DIR ?= "${BSPDIR}/downloads"
 
-SROBO_VERSION = "2023.0.0"
+# Expand the free space in the image to 2GB
+IMAGE_ROOTFS_EXTRA_SPACE = "2097152"
 
+# Useful tools to put in the image
 IMAGE_INSTALL:append = " nano vim"
+
+SROBO_VERSION = "2023.0.0"
