Make /var/log non volatile

--- a/srobo-config/local.conf
+++ b/srobo-config/local.conf
@@ -287,6 +287,9 @@ hostname:pn-base-files = "robot"
 
 DL_DIR ?= "${BSPDIR}/downloads"
 
+# Make logs persistent
+VOLATILE_LOG_DIR = "no"
+
 # Expand the free space in the image to 2GB
 IMAGE_ROOTFS_EXTRA_SPACE = "2097152"
 
