Allow TCP and UDP ports in firewall for competitor usage.
Fixes #36

--- a/sources/meta-srobo/recipes-robot/srobo-firewall/srobo-firewall/nftables.conf
+++ b/sources/meta-srobo/recipes-robot/srobo-firewall/srobo-firewall/nftables.conf
@@ -22,6 +22,10 @@ table inet filter {
 		udp dport domain accept comment "Allow DNS"
 		udp dport bootps accept comment "Allow DHCP"
 
+		# Ports available for competitor usage
+		tcp dport 7000-8999 accept comment "Allow competitor TCP ports 7000-8999 inclusive"
+		udp dport 7000-8999 accept comment "Allow competitor TCP ports 7000-8999 inclusive"
+
 		counter reject
 	}
 
