Add non-root robot user for end-user use
Closes #34
Closes #10

--- a/sources/meta-srobo/recipes-robot/python-astoria/astoria-udiskie/astoria-udiskie.service
+++ b/sources/meta-srobo/recipes-robot/python-astoria/astoria-udiskie/astoria-udiskie.service
@@ -4,7 +4,7 @@ After=udisks2.service
 
 [Service]
 ExecStart=/usr/bin/udiskie -c /etc/astoria-udiskie.yml
-User=astoria
+User=robot
 Restart=on-failure
 RestartSec=5s
 
