--- a/sources/meta-srobo/recipes-robot/python-astoria/astoria-config/astdiskd.service
+++ b/sources/meta-srobo/recipes-robot/python-astoria/astoria-config/astdiskd.service
@@ -4,7 +4,7 @@ After=mosquitto.service udisks2.service
 
 [Service]
 ExecStart=/usr/bin/astdiskd
-User=astoria
+User=robot
 Restart=on-failure
 RestartSec=5s
 
