--- a/sources/meta-srobo/recipes-robot/srobo-firewall/srobo-firewall/nftables.conf
+++ b/sources/meta-srobo/recipes-robot/srobo-firewall/srobo-firewall/nftables.conf
@@ -17,14 +17,16 @@ table inet filter {
 
 		tcp dport ssh accept comment "Allow SSH on v4 and v6"
 		tcp dport {http, https} accept comment "Allow HTTP on v4 and v6"
+		tcp dport 5678 accept comment "Allow Microsoft Debug Adapter Protocol"
 		tcp dport 9001 accept comment "Allow MQTT over WebSockets"
+		tcp dport 12345 accept comment "Allow PyDev Debugger"
 
 		udp dport domain accept comment "Allow DNS"
 		udp dport bootps accept comment "Allow DHCP"
 
 		# Ports available for competitor usage
 		tcp dport 7000-8999 accept comment "Allow competitor TCP ports 7000-8999 inclusive"
-		udp dport 7000-8999 accept comment "Allow competitor TCP ports 7000-8999 inclusive"
+		udp dport 7000-8999 accept comment "Allow competitor UDP ports 7000-8999 inclusive"
 
 		counter reject
 	}
