Add chmod on CI

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -25,7 +25,8 @@ jobs:
 
       - name: Build image
         run: |
-          ./build-image.sh
+          chmod +x ./build.sh
+          ./build.sh
 
       - name: Get output name
         id: git-desc
