--- a/files/network/nftables.conf
+++ b/files/network/nftables.conf
@@ -4,40 +4,13 @@ flush ruleset
 
 table inet filter {
 	chain input {
-		type filter hook input priority 0
-		policy drop # Drop this.
-
-		ct state { established, related } counter accept
-		ct state invalid drop
-
-		iif lo accept
-
-		ip protocol icmp accept
-		meta l4proto icmpv6 accept
-
-		tcp dport ssh accept comment "Allow SSH on v4 and v6"
-		tcp dport {http, https} accept comment "Allow HTTP on v4 and v6"
-		tcp dport 5678 accept comment "Allow Microsoft Debug Adapter Protocol"
-		tcp dport 9001 accept comment "Allow MQTT over WebSockets"
-
-		udp dport domain accept comment "Allow DNS"
-		udp dport bootps accept comment "Allow DHCP"
-
-		# Ports available for competitor usage
-		tcp dport 7000-8999 accept comment "Allow competitor TCP ports 7000-8999 inclusive"
-		udp dport 7000-8999 accept comment "Allow competitor UDP ports 7000-8999 inclusive"
-
-		counter reject
+		type filter hook input priority 0;
 	}
-
 	chain forward {
-		type filter hook forward priority 0
-		policy drop
-
-		ct state {established, related} counter accept
-
-		ip saddr 192.168.32.0/24 counter accept
-		counter reject
+		type filter hook forward priority 0;
+	}
+	chain output {
+		type filter hook output priority 0;
 	}
 }
 
