--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Build image
         run: |
-          chmod +x ./build.sh
+          chmod +x ./build-image.sh
           ./build-image.sh
 
       - name: Get output name
