--- a/files/python/requirements.txt
+++ b/files/python/requirements.txt
@@ -2,7 +2,7 @@
 RPi.GPIO>=0.7.0,<1
 git+https://github.com/srobo/sr-robot.git@sr2024
 kchd
-astoria
+git+https://github.com/srobo/astoria.git@wbb/sr2024-fixes
 
 rtui
 
