--- a/files/python/requirements.txt
+++ b/files/python/requirements.txt
@@ -1,6 +1,6 @@
 # The python packages required to make the image work
 RPi.GPIO>=0.7.0,<1
-git+https://github.com/srobo/sr-robot.git@sr2024
+sr-robot3==2024.0.0rc1
 kchd
 astoria==0.11.2
 
