--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,9 @@ jobs:
         if: github.ref_type != 'tag'
         with:
           name: image-${{ env.git_desc }}
-          path: ${{ env.image_path }}
+          path:
+            - ${{ env.image_path }}
+            - py-packages.txt
 
       - name: Do release with image artifact
         if: github.ref_type == 'tag'
@@ -51,7 +53,9 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           allowUpdates: true
-          artifact: ${{ env.image_path }}
+          artifacts:
+            - ${{ env.image_path }}
+            - py-packages.txt
           draft: true
           generateReleaseNotes: true
           omitBodyDuringUpdate: true
